--- a/set_covering.ipynb
+++ b/set_covering.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 565,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 566,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,25 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 567,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([False,  True, False, False, False]),\n",
-       " array([ True, False, False, False, False]),\n",
-       " array([False, False,  True,  True, False]),\n",
-       " array([False, False,  True,  True, False]),\n",
+       "(array([False, False, False,  True, False]),\n",
+       " array([False,  True, False,  True, False]),\n",
+       " array([ True, False, False,  True, False]),\n",
+       " array([False, False,  True,  True,  True]),\n",
+       " array([False,  True, False, False, False]),\n",
+       " array([False, False, False,  True, False]),\n",
        " array([ True, False,  True, False,  True]),\n",
-       " array([False, False, False, False,  True]),\n",
        " array([False, False, False, False, False]),\n",
-       " array([False, False, False, False, False]),\n",
-       " array([False, False, False, False, False]),\n",
-       " array([ True, False, False, False,  True]))"
+       " array([ True, False, False, False, False]),\n",
+       " array([ True, False, False, False, False]))"
       ]
      },
-     "execution_count": 543,
+     "execution_count": 567,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 568,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 569,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 570,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 571,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 56 steps\n"
+      "Solved in 41 steps\n"
      ]
     }
    ],
@@ -227,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State(taken={0, 3, 5, 8, 9}, not_taken={1, 2, 4, 6, 7})\n"
+      "State(taken={4, 5, 6, 7, 8, 9}, not_taken={0, 1, 2, 3})\n"
      ]
     },
     {
@@ -243,7 +243,7 @@
        "True"
       ]
      },
-     "execution_count": 548,
+     "execution_count": 572,
      "metadata": {},
      "output_type": "execute_result"
     }
