--- a/set_covering_path_search.ipynb
+++ b/set_covering_path_search.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,25 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([False, False, False,  True, False]),\n",
-       " array([False,  True, False,  True, False]),\n",
-       " array([ True, False, False,  True, False]),\n",
-       " array([False, False,  True,  True,  True]),\n",
-       " array([False,  True, False, False, False]),\n",
-       " array([False, False, False,  True, False]),\n",
-       " array([ True, False,  True, False,  True]),\n",
+       "(array([ True, False, False, False, False]),\n",
        " array([False, False, False, False, False]),\n",
-       " array([ True, False, False, False, False]),\n",
-       " array([ True, False, False, False, False]))"
+       " array([False, False, False,  True, False]),\n",
+       " array([False, False, False, False,  True]),\n",
+       " array([False, False, False,  True, False]),\n",
+       " array([ True, False,  True, False, False]),\n",
+       " array([False, False, False, False, False]),\n",
+       " array([False, False, False, False,  True]),\n",
+       " array([False, False, False, False,  True]),\n",
+       " array([ True, False, False,  True,  True]))"
       ]
      },
-     "execution_count": 567,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 41 steps\n"
+      "not solvable with the generated sets\n",
+      "Solved in 1025 steps\n"
      ]
     }
    ],
@@ -227,23 +228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State(taken={4, 5, 6, 7, 8, 9}, not_taken={0, 1, 2, 3})\n"
+      "State(taken={1, 2, 3, 4, 5, 6, 7, 8, 9}, not_taken={0})\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 572,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
