--- a/set_covering_path_search/set_covering_path_search.ipynb
+++ b/set_covering_path_search/set_covering_path_search.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,25 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ True, False, False, False, False]),\n",
-       " array([False, False, False, False, False]),\n",
+       "(array([False,  True, False, False, False]),\n",
+       " array([False,  True,  True, False, False]),\n",
+       " array([ True, False, False, False, False]),\n",
+       " array([False,  True, False, False,  True]),\n",
+       " array([ True,  True, False, False, False]),\n",
+       " array([False,  True, False,  True, False]),\n",
        " array([False, False, False,  True, False]),\n",
-       " array([False, False, False, False,  True]),\n",
-       " array([False, False, False,  True, False]),\n",
-       " array([ True, False,  True, False, False]),\n",
        " array([False, False, False, False, False]),\n",
-       " array([False, False, False, False,  True]),\n",
-       " array([False, False, False, False,  True]),\n",
-       " array([ True, False, False,  True,  True]))"
+       " array([ True,  True, False, False, False]),\n",
+       " array([False, False, False, False,  True]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,15 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not solvable with the generated sets\n",
-      "Solved in 1025 steps\n"
+      "Solved in 71 steps\n"
      ]
     }
    ],
@@ -228,23 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State(taken={1, 2, 3, 4, 5, 6, 7, 8, 9}, not_taken={0})\n"
+      "State(taken={8, 1, 9, 6}, not_taken={0, 2, 3, 4, 5, 7})\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
