notes on pq vs sq

--- a/set_covering_path_search/set_covering_path_search_stats.ipynb
+++ b/set_covering_path_search/set_covering_path_search_stats.ipynb
@@ -120,6 +120,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **PriorityQueue**: The code initializes frontier as a PriorityQueue. In this data structure, states are extracted based on their priority. This priority-driven extraction is different from a standard BFS, where states are processed in the order they were added to the queue.\n",
+    "\n",
+    "- **SimpleQueue**: the code more closely resemble a proper breadth-first search (BFS). A SimpleQueue follows a first-in, first-out (FIFO) order, which is a fundamental characteristic of BFS.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -201,6 +210,27 @@
     "plt.xlabel(\"Number of iterations\")\n",
     "plt.ylabel(\"Number of times\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The significant difference in the average number of iterations required to solve the set covering problem using a priority queue (PQ) versus a simple queue could be attributed to the search strategy and the order in which states (subsets) are explored. \n",
+    "\n",
+    "\n",
+    "**Priority Queue (PQ):**\n",
+    "   \n",
+    "   - Priority queues use a heuristic or priority score to determine the order in which states are extracted for exploration. In the context of the set covering problem, this allows you to prioritize states that are more likely to lead to a solution. For example, if a state already covers a significant portion of the universal set U, it might be given higher priority.\n",
+    "\n",
+    "   - The priority queue approach is more likely to explore promising states first and may lead to finding solutions with fewer iterations on average. This is similar to a best-first search strategy, where you prioritize exploration based on some measure of potential success.\n",
+    "\n",
+    "**Simple Queue:**\n",
+    "   \n",
+    "   - Simple queues, on the other hand, typically follow a first-in, first-out (FIFO) order. States are explored in the order they were added to the queue, without considering their potential to lead to a solution. This can result in exploring states that are less likely to help cover the universal set, leading to a larger number of iterations on average.\n",
+    "\n",
+    "   - The simple queue approach explores states in a less guided manner and may require more iterations to find a solution, especially if the search space is large and complex.\n",
+    "\n"
    ]
   }
  ],
