sc-ps-lifoqueue

--- a/set_covering_path_search/set_covering_path_search.ipynb
+++ b/set_covering_path_search/set_covering_path_search.ipynb
@@ -44,7 +44,7 @@
     "from random import random\n",
     "from functools import reduce\n",
     "from collections import namedtuple\n",
-    "from queue import PriorityQueue, SimpleQueue"
+    "from queue import PriorityQueue, SimpleQueue, LifoQueue"
    ]
   },
   {
