--- a/set_covering_path_search/set_covering_path_search.ipynb
+++ b/set_covering_path_search/set_covering_path_search.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,25 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([False,  True, False, False, False]),\n",
-       " array([False,  True,  True, False, False]),\n",
-       " array([ True, False, False, False, False]),\n",
+       "(array([False, False,  True, False,  True]),\n",
+       " array([False, False,  True, False, False]),\n",
        " array([False,  True, False, False,  True]),\n",
-       " array([ True,  True, False, False, False]),\n",
-       " array([False,  True, False,  True, False]),\n",
-       " array([False, False, False,  True, False]),\n",
        " array([False, False, False, False, False]),\n",
-       " array([ True,  True, False, False, False]),\n",
-       " array([False, False, False, False,  True]))"
+       " array([ True, False,  True, False,  True]),\n",
+       " array([False, False,  True, False, False]),\n",
+       " array([False, False, False, False,  True]),\n",
+       " array([False, False, False, False,  True]),\n",
+       " array([False, False, False,  True, False]),\n",
+       " array([False,  True, False, False,  True]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
     "    # Create an array with all False values of the same size as the problem size\n",
     "    result = np.zeros(PROBLEM_SIZE, dtype=bool)\n",
     "\n",
-    "    # Iterate through the selected sets and update the result array using logical OR. \n",
+    "    # Iterate through the selected sets and update the result array using logical OR.\n",
     "    for i in state.taken:\n",
     "        np.logical_or(result, SETS[i], out=result)\n",
     "    #  The **out** parameter of np.logical_or directly updates the\n",
@@ -116,7 +116,19 @@
     "    #  and manipulation, especially for larger problem sizes.\n",
     "\n",
     "    # Check if all elements in the result array are True\n",
-    "    return result.all()"
+    "    return result.all()\n",
+    "\n",
+    "\n",
+    "def distance(state):\n",
+    "    \"\"\"\n",
+    "    The heuristic is the number of elements in the set U that are not covered\n",
+    "    by any of the sets in the collection S\n",
+    "    \"\"\"\n",
+    "    return PROBLEM_SIZE - np.sum(\n",
+    "        reduce(\n",
+    "            np.logical_or, [SETS[i] for i in state.not_taken], np.zeros(PROBLEM_SIZE)\n",
+    "        )\n",
+    "    )\n"
    ]
   },
   {
@@ -141,17 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "frontier = PriorityQueue()\n",
-    "# frontier = SimpleQueue()"
+    "# frontier = SimpleQueue()\n",
+    "frontier = LifoQueue()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +178,9 @@
    "source": [
     "# initialize the frontier with the inistial state, ie no sets have been taken yet\n",
     "initial_state= State(set(), set(range(NUMBER_SET)))\n",
+    "\n",
+    "\n",
+    "\n",
     "frontier.put(initial_state)\n",
     "print(initial_state)"
    ]
@@ -186,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 71 steps\n"
+      "Solved in 6 steps - Steps to solution: 6\n"
      ]
     }
    ],
@@ -222,19 +238,39 @@
     "    # extract from beginning of frontier\n",
     "    current_state = frontier.get()\n",
     "\n",
-    "print(\"Solved in\",counter,\"steps\")"
+    "print(\"Solved in\",counter,\"steps\", \"- Steps to solution:\", len(current_state.taken))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance(current_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State(taken={8, 1, 9, 6}, not_taken={0, 2, 3, 4, 5, 7})\n"
+      "State(taken={4, 5, 6, 7, 8, 9}, not_taken={0, 1, 2, 3})\n"
      ]
     },
     {
@@ -243,7 +279,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
