A* avgs for diff problem specs

--- a/set_covering_path_search/sc_ps_Astar.ipynb
+++ b/set_covering_path_search/sc_ps_Astar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,21 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 503,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mall(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         reduce(np\u001b[39m.\u001b[39mlogical_or, [sets[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m state\u001b[39m.\u001b[39mtaken], np\u001b[39m.\u001b[39mzeros(PROBLEM_SIZE))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb#W1sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# assert generated problem is solvable, ie the goal check of a stete with all\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb#W1sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# sets taken is true\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/gabri/repos/ComputationalIntelligence/set_covering_path_search/sc_ps_Astar.ipynb#W1sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39massert\u001b[39;00m goal_check(State(\u001b[39mrange\u001b[39m(NUMBER_SET), \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m), SETS)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def goal_check(state, sets):\n",
     "    \"\"\"\n",
@@ -110,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +186,8 @@
     "    while not open_set.empty():\n",
     "        # Get the state with the lowest f score from the priority queue\n",
     "        _, current_state = open_set.get()\n",
+    "\n",
+    "        print(current_state)\n",
     "\n",
     "        # If the current state is a goal state, return the solution\n",
     "        if goal_check(current_state, sets):\n",
@@ -225,25 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ True, False, False,  True, False]),\n",
-       " array([False,  True,  True,  True, False]),\n",
-       " array([False, False,  True,  True, False]),\n",
-       " array([False,  True, False,  True, False]),\n",
+       "(array([False,  True, False, False, False]),\n",
+       " array([False, False,  True,  True,  True]),\n",
+       " array([ True, False, False, False,  True]),\n",
+       " array([False, False, False,  True, False]),\n",
+       " array([False, False, False, False,  True]),\n",
        " array([False,  True, False, False, False]),\n",
-       " array([ True, False, False,  True, False]),\n",
-       " array([False,  True, False, False, False]),\n",
-       " array([ True, False, False, False, False]),\n",
-       " array([False,  True, False, False, False]),\n",
-       " array([False, False,  True, False,  True]))"
+       " array([False, False, False, False, False]),\n",
+       " array([ True,  True, False, False, False]),\n",
+       " array([False, False, False, False,  True]),\n",
+       " array([False,  True,  True, False, False]))"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,17 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: [1, 0, 9]\n",
-      "[False  True  True  True False]\n",
-      "[ True False False  True False]\n",
-      "[False False  True False  True]\n"
+      "State(taken=[], cost=0, heuristic=5)\n",
+      "State(taken=[1], cost=1, heuristic=2)\n",
+      "State(taken=[1, 7], cost=2, heuristic=0)\n",
+      "\n",
+      "Solution: [1, 7]\n",
+      "[False False  True  True  True]\n",
+      "[ True  True False False False]\n"
      ]
     }
    ],
@@ -272,11 +265,11 @@
     "# Call the A* function and print the result\n",
     "result = astar(SETS)\n",
     "if result:\n",
-    "    print(\"Solution:\", result)\n",
+    "    print(\"\\nSolution:\", result)\n",
     "    for i in result:\n",
     "        print(SETS[i])\n",
     "else:\n",
-    "    print(\"No solution found.\")"
+    "    print(\"\\nNo solution found.\")"
    ]
   }
  ],
