--- a/set_covering_path_search/sc_ps_Astar.ipynb
+++ b/set_covering_path_search/sc_ps_Astar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,25 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([False,  True, False, False, False]),\n",
-       " array([False, False,  True,  True,  True]),\n",
-       " array([ True, False, False, False,  True]),\n",
-       " array([False, False, False,  True, False]),\n",
+       "(array([ True, False, False, False, False]),\n",
        " array([False, False, False, False,  True]),\n",
-       " array([False,  True, False, False, False]),\n",
-       " array([False, False, False, False, False]),\n",
+       " array([False, False, False,  True, False]),\n",
+       " array([ True, False, False, False, False]),\n",
        " array([ True,  True, False, False, False]),\n",
        " array([False, False, False, False,  True]),\n",
-       " array([False,  True,  True, False, False]))"
+       " array([False,  True,  True,  True, False]),\n",
+       " array([ True, False,  True, False, False]),\n",
+       " array([False, False, False,  True, False]),\n",
+       " array([False, False, False,  True,  True]))"
       ]
      },
-     "execution_count": 506,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,12 +252,14 @@
      "output_type": "stream",
      "text": [
       "State(taken=[], cost=0, heuristic=5)\n",
-      "State(taken=[1], cost=1, heuristic=2)\n",
-      "State(taken=[1, 7], cost=2, heuristic=0)\n",
+      "State(taken=[6], cost=1, heuristic=2)\n",
+      "State(taken=[6, 0], cost=2, heuristic=1)\n",
+      "State(taken=[6, 0, 1], cost=3, heuristic=0)\n",
       "\n",
-      "Solution: [1, 7]\n",
-      "[False False  True  True  True]\n",
-      "[ True  True False False False]\n"
+      "Solution: [6, 0, 1]\n",
+      "[False  True  True  True False]\n",
+      "[ True False False False False]\n",
+      "[False False False False  True]\n"
      ]
     }
    ],
