GA_heuristic TODO

--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -250,7 +250,7 @@
     "print(\"MC:\",astar(SETS, MC_heuristic))\n",
     "print(\"MRE+MC:\",astar(SETS, MRE_MC_heuristic))\n",
     "print(\"RANDOM:\",astar(SETS, RANDOM_heuristic))\n",
-    "print(\"GA:\",astar(SETS, GA_heuristic))"
+    "# print(\"GA:\",astar(SETS, GA_heuristic)) # TODO"
    ]
   }
  ],
